<resources>
    <string name="app_name">Android Hunt</string>

    <!-- [A] -->
    <string name="hello_world">Hello World!</string>

    <string name="full_name">Azaera Toussaint</string>

    <string name="portfolio_bio_text">Senior Computer Science student at Bowie State University from the U.S. Virgin Islands🇻🇮 with a passion for AI and baking🧁</string>

    <string name="profile_hobby_title">My Hobbies!</string>
    <string name="profile_hobby_first_text">Playing video games🎮</string>
    <string name="profile_hobby_second_text">Baking 🍰</string>
    <string name="profile_hobby_third_text">Working out🏋🏾️</string>

</resources>